Cleanup .htm files (ensure ] is at eol. Check -missing_one in -setup mode

--- a/bin/setup/lang/backg.htm
+++ b/bin/setup/lang/backg.htm
@@ -16,7 +16,8 @@ fr: Image de fond
 it: Immagine di fondo
 lv: Fona attçls
 sv: Bakgrundsbild
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -68,7 +69,8 @@ fr: toto.jpg
 it: pippo.jpg
 lv: foo.jpg
 sv: foo.jpg
-]"
+]
+"
 </pre>
 
 <p />
