--- a/bin/setup/lang/bso.htm
+++ b/bin/setup/lang/bso.htm
@@ -16,7 +16,8 @@ fr: Création d’une généalogie
 it: Creazione di una base di dati
 lv: Datu bâzes izveidoðana
 sv: Skapa en databas
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -70,7 +71,8 @@ lv: <b>Brîdinâjums</b>: ðâda datubâze "%o" jau eksistç Jûsu
 sv: <b>Varning</b>: det existerar redan en databas med namnet "%o" i din
     <a href="gwsetup?lang=%l;v=list.htm">katalog</a>. Om du trycker på knappen
     "OK" nedan, kommer den att bli raderad.
-]<p />
+]
+<p />
 
 [
 de: Falls du diese Funktion gerade schonmal ausgeführt hattest, dann
@@ -99,7 +101,8 @@ lv: Ja Jûs tikai tikko esat to izveidojuði, tâ varbût ir izveides
 sv: Om du precis gjorde detta, har databasen blivit raderad nu.
     Annars, återvänd till föregående sida och välj ett annat
     namn för din databas.
-]<p />}
+]
+<p />}
 
 <li>
 
@@ -143,7 +146,8 @@ fr: Appuyez sur Ok pour créer votre généalogie
 it: Cliccate sul bottone qui sotto per creare la vostra base di dati
 lv: Nospiediet zemâk esoðo podziòu, lai izveidotu datu bâzi
 sv: Tryck på knappen nedan för att skapa din databas
-]%v{<br /><blink><font color=red>[
+]
+%v{<br /><blink><font color=red>[
 de:  und die alte Datenbank "%o" im Zielverzeichnis zu löschen
 en: , and overwrite the previous database "%o" of the target directory
 es:  y destruir  la base "%o" de la carpeta de llegada
@@ -152,7 +156,8 @@ fr:  et écraser la base "%o" du répertoire d’arrivée
 it:  e cancellare la base "%o" dalla directory di arrivo
 lv: , un dzçstu iepriekðçjo datu bâzi "%o" katalogâ
 sv:  och radera den föregående databasen "%o" från målkatalogen
-]</font></blink>}:
+]
+</font></blink>}:
 
 <p />
 
@@ -160,7 +165,8 @@ sv:  och radera den föregående databasen "%o" från målkatalogen
 %h
 <dl><dt><dd>
 <input type="submit" value="Ok" />
-<input type="submit" name="cancel" value="[cancel]" />
+<input type="submit" name="cancel" value="[cancel]
+" />
 </dl>
 </form>
 
