--- a/bin/setup/lang/bso_comm.htm
+++ b/bin/setup/lang/bso_comm.htm
@@ -15,7 +15,8 @@ fi: Tiedoston "comm.log" sisältö
 fr: Contenu du fichier comm.log
 it: Contenuto del file "comm.log"
 sv: Innehållet i filen "comm.log"
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -49,7 +50,8 @@ it: file vuoto
 lv: datne ir tukða
 sv: tom fil
 lv: datne ir tukða
-] -}
+]
+-}
 </pre>
 </dl>
 
