--- a/bin/setup/lang/bso_log.htm
+++ b/bin/setup/lang/bso_log.htm
@@ -10,7 +10,8 @@
   <title>[
 en: Content of result file
 fr: Contenu du fichier résultat
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -39,6 +40,7 @@ it: file vuoto
 lv: datne ir tukða
 sv: tom fil
 lv: datne ir tukða
-] -}
+]
+-}
 </pre>
 </dl>
