--- a/bin/setup/lang/bso_ok.htm
+++ b/bin/setup/lang/bso_ok.htm
@@ -16,7 +16,8 @@ fr: Généalogie créée
 it: Base di dati creata
 lv: Datu bâze izveidota
 sv: Databasen skapad
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
