--- a/bin/setup/lang/cleanup.htm
+++ b/bin/setup/lang/cleanup.htm
@@ -16,7 +16,8 @@ fr: Nettoyage
 it: Pulizia
 lv: Sakopðana
 sv: Upprensning
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -134,7 +135,8 @@ fr: il n’y a aucune base de données actuellement
 it: attualmente non esiste nessuna base di dati
 lv: patreiz nav nekâdu datu
 sv: det finns ingen databas för tillfället
-]</tr></td>}
+]
+</tr></td>}
 </table>
 <p>
 <li>
@@ -158,7 +160,8 @@ fr: Nettoyage
 it: Pulizia
 lv: Sakopt
 sv: Rensa upp
-]" />
+]
+" />
 
 </form>
 
