--- a/bin/setup/lang/cleanup1.htm
+++ b/bin/setup/lang/cleanup1.htm
@@ -16,7 +16,8 @@ fr: Nettoyage
 it: Pulizia - fase 2
 lv: Sakopðana - 2. fâze
 sv: Rensa upp - fas 2
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
