--- a/bin/setup/lang/connex.htm
+++ b/bin/setup/lang/connex.htm
@@ -10,7 +10,8 @@
   <title>[
 en: Connex
 fr: Connex
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -45,7 +46,8 @@ fr: Sélectionnez votre base de données en cliquant sur le bouton associé :
 <tr align="left"><td>- [
 en: there is no database at present
 fr: il n'y a aucune base de données actuellement
-]</tr></td>}
+]
+</tr></td>}
 </table></dl>
 <p>
 <li>
@@ -65,7 +67,8 @@ sv: Välj de optioner du vill ha:
 <label for="a" style="font-family: monospace">-a&nbsp;&nbsp;</label>[
 en: All connex components.
 fr: Toutes les composantes connexes.
-]</td>
+]
+</td>
 </tr>
 </table></dl>
 <p>
@@ -75,7 +78,8 @@ fr: Toutes les composantes connexes.
 <label for="s" style="font-family: monospace">-s&nbsp;&nbsp;</label>[
 en: Produce connected components statistics.
 fr: Afficher les statistiques sur les composantes connexes.
-]</td>
+]
+</td>
 </tr>
 </table></dl>
 <p>
@@ -87,7 +91,8 @@ fr: Afficher les statistiques sur les composantes connexes.
 </label>&nbsp;&nbsp;[
 en: Details for this length.
 fr: Fournir détails pour cette taille.
-]</td>
+]
+</td>
 </tr>
 </table></dl>
 <p>
@@ -98,7 +103,8 @@ fr: Fournir détails pour cette taille.
 <input type="input" name="i" size="20" maxlength="50" style="padding-left:4px"></label>&nbsp;&nbsp;[
 en: Ignore this file.
 fr: Ignorer ce fichier.
-]</td>
+]
+</td>
 </tr>
 </table></dl>
 <p>
@@ -108,7 +114,8 @@ fr: Ignorer ce fichier.
 <label for="bf" style="font-family: monospace">-bf&nbsp;&nbsp;</label>[
 en: By origin file.
 fr: D'après le fichier origine.
-]</td>
+]
+</td>
 </tr>
 </table></dl>
 <p>
@@ -124,7 +131,8 @@ fr: <span style="color:#FF0000;">ATTENTION</span> : Les trois commandes qui suiv
 <input type="input" name="del" size="5" maxlength="2" style="padding-left:4px"></label>&nbsp;&nbsp;[
 en: Ask for deleting branches whose size <= that value.
 fr: Demander à détruire les composantes de taille <= à cette valeur.
-]</td>
+]
+</td>
 </tr>
 </table></dl>
 <p>
@@ -135,7 +143,8 @@ fr: Demander à détruire les composantes de taille <= à cette valeur.
 <input type="input" name="cnt" size="5" maxlength="2" style="padding-left:4px"></label>&nbsp;&nbsp;[
 en: Specifiy the number of branches to be deleted.
 fr: Définit le nombre de branches à supprimer.
-]</td>
+]
+</td>
 </tr>
 </table></dl>
 <p>
@@ -145,7 +154,8 @@ fr: Définit le nombre de branches à supprimer.
 <label for="exact" style="font-family: monospace">-exact&nbsp;&nbsp;</label>[
 en: Restrict deleting branches whose size = -del.
 fr: Limite la suppression aux branches de taille = -del.
-]</td>
+]
+</td>
 </tr>
 </table></dl>
 <p>
@@ -157,7 +167,8 @@ fr: Limite la suppression aux branches de taille = -del.
 <input type="input" name="o1" size="20" maxlength="50" style="padding-left:4px"></label>&nbsp;&nbsp;[
 en: Output results to this file.
 fr: Rediriger les résultats vers ce fichier.
-]</td>
+]
+</td>
 </tr>
 <p>
 <tr align="left">
@@ -165,7 +176,8 @@ fr: Rediriger les résultats vers ce fichier.
 <label for="o" style="font-family: monospace">&nbsp;&nbsp;</label>[
 en: Output results in basename/notes_d/connex.txt (-o must stay empty and notes_d must exist).
 fr: Redirige le résultat vers basename/notes_d/connex.txt (-o doit rester vide et notes_d doit exister).
-]</td>
+]
+</td>
 </tr>
 <p>
 <tr align="left">
@@ -173,7 +185,8 @@ fr: Redirige le résultat vers basename/notes_d/connex.txt (-o doit rester vide 
 <label for="o" style="font-family: monospace">&nbsp;&nbsp;</label>[
 en: No redirection of results.
 fr: Pas de redirection des résultats.
-]</td>
+]
+</td>
 </tr>
 </table></dl>
 <p>
