--- a/bin/setup/lang/connex_ok.htm
+++ b/bin/setup/lang/connex_ok.htm
@@ -9,7 +9,8 @@
   <title>[
 en: Connected components identified
 fr: Calcul des composantes connexes exécuté
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
