--- a/bin/setup/lang/consang.htm
+++ b/bin/setup/lang/consang.htm
@@ -16,7 +16,8 @@ fr: Consanguinités
 it: Consanguineità
 lv: Consanguinities
 sv: Blodsband
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -95,7 +96,8 @@ fr: il n’y a aucune base de données actuellement
 it: attualmente non esiste nessuna base di dati
 lv: there is no database at present
 sv: det finns ingen databas för tillfället
-]</tr></td>}
+]
+</tr></td>}
 </table>
 
 <p />
@@ -125,7 +127,8 @@ fr: Recommencer le calcul sur toute la base.
 it: Ricominciare il calcolo su tutta la base.
 lv: Restart the computing from scratch.
 sv: Starta beräkning från början.
-]</td></tr>
+]
+</td></tr>
 </table>
 
 <p />
@@ -152,6 +155,7 @@ fr: Consang
 it: Consang
 lv: Consang
 sv: Beräkna blodsband
-]" />
+]
+" />
 </ul>
 </form>
