--- a/bin/setup/lang/del_ok.htm
+++ b/bin/setup/lang/del_ok.htm
@@ -16,7 +16,8 @@ fr: Bases détruites
 it: Basi soppresse
 lv: Datubâzes izdzçstas
 sv: Databaser raderade
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -63,7 +64,8 @@ fr: pas de sélection
 it: nessuna selezione
 lv: nav iezîmçtas
 sv: inga val
-] -}
+]
+-}
 
 </ul>
 
@@ -94,7 +96,8 @@ fr: il n’y a aucune base de données
 it: non rimane nessuna base di dati
 lv: nav nevienas datu bâzes
 sv: det finns ingen databas
-]}
+]
+}
 
 </ul>
 
