--- a/bin/setup/lang/delete.htm
+++ b/bin/setup/lang/delete.htm
@@ -16,7 +16,8 @@ fr: Suppression
 it: Soppressione
 lv: Dzçst
 sv: Radera
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -75,7 +76,8 @@ fr: il n’y a aucune base de données actuellement
 it: attualmente non esiste nessuna base di dati
 lv: patreiz nav nevienas datubâzes
 sv: det finns ingen databas för tillfället
-]</tr></td>}
+]
+</tr></td>}
 </table>
 <p>
 <li>
@@ -99,6 +101,7 @@ fr: Vérifier
 it: Verificare
 lv: Pârbaudît
 sv: Radera
-]">
+]
+">
 </ul>
 </form>
