--- a/bin/setup/lang/delete_1.htm
+++ b/bin/setup/lang/delete_1.htm
@@ -16,7 +16,8 @@ fr: Suppression de bases données
 it: Cancellazione di basi di dati
 lv: Datu bâþu dzçðana
 sv: Radering av databaser
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -68,7 +69,8 @@ fr: pas de sélection
 it: nessuna selezione
 lv: nav iezîmçtas
 sv: inga val
-] -}
+]
+-}
 
 </ul>
 
@@ -101,7 +103,8 @@ fr: Détruire
 it: Cancellare
 lv: Izmest
 sv: Radera
-]" /></dl>
+]
+" /></dl>
 
 <p />
 
