--- a/bin/setup/lang/err_acc.htm
+++ b/bin/setup/lang/err_acc.htm
@@ -16,7 +16,8 @@ fr: Accès interdit
 it: Accesso vietato
 lv: Pieja liegta
 sv: Förbjuden åtkomst
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -33,7 +34,8 @@ fr: Accès interdit
 it: Accesso vietato
 lv: Pieja liegta
 sv: Förbjuden åtkomst
-]</font></h1>
+]
+</font></h1>
 </div>
 
 [
