--- a/bin/setup/lang/err_miss.htm
+++ b/bin/setup/lang/err_miss.htm
@@ -16,7 +16,8 @@ fr: Nom manquant
 it: Nome mancante
 lv: Trûkst nosaukuma
 sv: Det fattas namn
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -33,7 +34,8 @@ fr: Nom manquant
 it: Nome mancante
 lv: Trûkst nosaukuma
 sv: Det fattas namn
-]</font>
+]
+</font>
 </h1>
 </div>
 
