--- a/bin/setup/lang/err_name.htm
+++ b/bin/setup/lang/err_name.htm
@@ -16,7 +16,8 @@ fr: Nom incorrect
 it: Nome non conforme
 lv: Nederîgs nosaukums
 sv: Felaktigt namn
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -33,7 +34,8 @@ fr: Nom incorrect
 it: Nome non conforme
 lv: Nederîgs nosaukums
 sv: Felaktigt namn
-]</font></h1>
+]
+</font></h1>
 </div>
 
 [
