--- a/bin/setup/lang/err_outd.htm
+++ b/bin/setup/lang/err_outd.htm
@@ -16,7 +16,8 @@ fr: Page non à jour
 it: Pagina non aggiornata
 lv: Lapa novecojusi
 sv: Sidan är gammal
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -33,7 +34,8 @@ fr: Page non à jour
 it: Pagina non aggiornata
 lv: Lapa novecojusi
 sv: Sidan är gammal
-]</font></h1>
+]
+</font></h1>
 </div>
 
 <br /><p />
