--- a/bin/setup/lang/err_smdr.htm
+++ b/bin/setup/lang/err_smdr.htm
@@ -7,14 +7,16 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[error]</title>
+  <title>[error]
+</title>
 %fsetup.css;
 </head>
 
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;"><font color="red">[error]</font></h1>
+<h1 style="margin:0;"><font color="red">[error]
+</font></h1>
 </div>
 
 <br /><p />
