--- a/bin/setup/lang/err_unkn.htm
+++ b/bin/setup/lang/err_unkn.htm
@@ -16,7 +16,8 @@ fr: Fichier inconnu
 it: File sconosciuto
 lv: Nepazîstama datne
 sv: Okänd fil
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -33,7 +34,8 @@ fr: Fichier inconnu
 it: File sconosciuto
 lv: Nepazîstama datne
 sv: Okänd fil
-]</font></h1>
+]
+</font></h1>
 </div>
 
 <br /><p />
