--- a/bin/setup/lang/ged2gwb.htm
+++ b/bin/setup/lang/ged2gwb.htm
@@ -65,7 +65,8 @@ sv: Skriv det kompletta namnet på din GEDCOM-fil.
 <tr><td valign="top">[
 en: Note:
 fr: Note :
-]</td>
+]
+</td>
 <td>[
 en: ../ allows you to reach the parent directory.<br>
     In the Windows world, this will be
@@ -75,7 +76,8 @@ fr: ../ vous permet de naviguer vers le dossier parent.<br>
     Dans le monde Windows, ceci ne
     vous permettra pas de changer la lettre du disque (C: -> D:), mais vous pouvez faire
     ce changement directement dans l'url dans le navigateur.
-]</td></tr>
+]
+</td></tr>
 </table>
 </span>
 <p>
@@ -115,7 +117,8 @@ en: name
 fr: nom
 it: nome
 sv: namnet
-]">
+]
+">
 </td></tr>
 </table>
 <p>
@@ -138,7 +141,8 @@ sv: Välj de optioner du vill ha:
 en: Put untreated GEDCOM tags in notes.
 fi: Pistä käsittelemättömät GEDCOM merkit lainausmerkkeihin.
 fr: Sauvegarder les tags GEDCOM non reconnus dans les notes.
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -156,7 +160,8 @@ fr: Convertir les prénoms en minuscules, avec leurs initiales en
 it: Convertire i nomi in minuscolo, con le loro iniziali in maiuscolo.
 lv: Pârveidot personvârdus uz mazajiem burtiem ar pirmajiem lielajiem.
 sv: Forcera gemena förnamn, bara initialer behålls som versaler.
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -179,7 +184,8 @@ it: Convertire i cognomi in minuscolo, con le loro iniziali in
 lv: Pârveidot uzvârdus  uz mazajiem burtiem ar pirmajiem lielajiem. Mçginât
     saglabât partikulus ar mazajiem burtiem.
 sv: Forcera gemena efternamn, bara initialer behålls som versaler.
-]</td></tr>
+]
+</td></tr>
 </table>
 <p>
 <table class="setup">
@@ -215,7 +221,8 @@ sv: När man skapar en person, om förnamnen i GEDCOM-filen innehåller flera
     namn separerade med mellanslag, kan du be att den första av dessa blir
     en persons "förnamn" och GEDCOM-filens kompletta förnamnsdel blir ett
     "förnnamns alias".
-]</td></tr>
+]
+</td></tr>
 
 <tr align=left>
 <td colspan=2 width="15"><input type="checkbox" name="efn" id="efn" value="on">
@@ -227,7 +234,8 @@ fr: Activer cette option.
 it: Scegliere questa opzione.
 lv: Ieslçgt ðo iespçju
 sv: Sätt denna option.
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -246,7 +254,8 @@ fr: L’option <i>first names enclosed</i> doit être suivie par une
     le prénom usuel.<br>
     Exemples : <span  style="font-family: monospace">-fne "\\"</span> ou
     <span style="font-family: monospace"> -fne "()"</span>.
-]</td></tr>
+]
+</td></tr>
 
 <tr align=left>
 <td colspan=2><span style="font-family: monospace">
@@ -331,7 +340,8 @@ fr: Annuler cette option.
 it: Annullare questa opzione.
 lv: Izslçgt ðo iespçju
 sv: Välj bort denna option.
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -340,7 +350,8 @@ sv: Välj bort denna option.
 <label for="no_pit" style="font-family: monospace">-no_pit        | </label>[
 en: Not public even if titles (see -epn option).
 fr: Ne pas considérer comme public si un titre a été détecté (voir option -epn).
-]</td>
+]
+</td>
 </tr>
 </table>
 
@@ -361,7 +372,8 @@ lv: Pretrunu gadîjumâ viedot negatîvus datumus (piemçram, dzimðana pçc
     nâves).
 sv: Sätt negativt datum när datumen är motsägande varandra (tex födelse
     efter död).
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -382,7 +394,8 @@ it: Non accettare le date negative: non interpretare un anno preceduto dal
 lv: Neveidot negatîvus datumus no esoðajiem negatîvajiem datumiem.
 sv: Inga negativa datum: tolka inte ett år med minus tecken framför som ett
     negativt år.
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -392,7 +405,8 @@ sv: Inga negativa datum: tolka inte ett år med minus tecken framför som ett
 <label for="nc" style="font-family: monospace">-nc            | </label>[
 en: No consistency check.
 fr: Ne pas contrôler la cohérence des données.
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -402,7 +416,8 @@ fr: Ne pas contrôler la cohérence des données.
 <label for="nopicture" style="font-family: monospace">-nopicture     | </label>[
 en: Don't extract individual picture.
 fr: Ne pas extraire d’images individuelles.
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -413,7 +428,8 @@ fr: Ne pas extraire d’images individuelles.
 en: Force relation status to "NoMention" (default is "Married").
 fr: Marquer les relations comme « Sans mention »
     (par défaut « Mariés »).
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -422,7 +438,8 @@ fr: Marquer les relations comme « Sans mention »
 [
 en: Default source:
 fr: Source par défaut  :
-]</td>
+]
+</td>
 </tr>
 <tr>
 <td colspan=2>
@@ -474,7 +491,8 @@ sv: En del GEDCOM-filer innehåller ibland datum med numrerade månader (från
     skrivas med identifierare (tex "MAY 1912" och inte "05/1912").
     Notationen "02/05/1912" är tvetydig (den kan antingen betyda "May 2,
     1912" eller "February 5, 1912" beroende på land).
-]</td><td></td>
+]
+</td><td></td>
 </tr>
 <td>    </td>
 <td width="120px"><span style="font-family: monospace"></span></td>
@@ -487,7 +505,8 @@ fr: Pour ces dates, n’extraire que la partie « année ».
 it: Per queste date, estrarre solamente la parte "anno".
 lv: Ðâdiem datumiem atstât tikai gadu
 sv: För dessa datum, extrahera endast "år" delen.
-]</label></td>
+]
+</label></td>
 </tr>
 
 <tr align=left>
@@ -502,7 +521,8 @@ fr: Interpréter ces dates comme « jour/mois/année ».
 it: Interpretare queste date come "giorno/mese/anno".
 lv: Pieòemt ðo datumus kâ "diena/mçnesis/gads"
 sv: Tolka dessa datum som "dag/månad/år".
-]</label></td>
+]
+</label></td>
 </tr>
 
 <tr align=left>
@@ -517,7 +537,8 @@ fr: Interpréter ces dates comme « mois/jour/année ».
 it: Interpretare queste date come "mese/giorno/anno".
 lv: Pieòemt ðo datumus kâ "mçnesis/diena/gads"
 sv: Tolka dessa datum som "månad/dag/år".
-]</label></td>
+]
+</label></td>
 </tr>
 </table>
 <p>
@@ -538,7 +559,8 @@ it: La codifica dei caratteri accentuati è normalmente indicata
 lv: Uzsvçrtie burti parsti ir norâdîti GEDCOM datnes galvgaïa aprakstâ.
 sv: Hur de accentuerade tecknen är kodade är normalt specifierat i
     GEDCOM-huvudet.
-]</td><td></td></tr>
+]
+</td><td></td></tr>
 
 <tr align=left>
 <td>    </td>
@@ -552,7 +574,8 @@ fr: Suivre les indications de l’en-tête du GEDCOM.
 it: Seguire le indicazioni dell'intestazione del file GEDCOM.
 lv: Sekot GEDCOM datnes galvgaïa apraksta norâdîjumam
 sv: Följ GEDCOM-huvudets information.
-]</label></td>
+]
+</label></td>
 </tr>
 
 <tr align=left><td></td>
@@ -566,7 +589,8 @@ fr: Les lettres accentuées sont en codage ANSEL.
 it: I caratteri accentuati sono codificati in ANSEL.
 lv: Uzsvçrtie burti ir ANSEL kodçjumâ.
 sv: De accentuerade tecknen är ANSEL kodade.
-]</label></td>
+]
+</label></td>
 </tr>
 
 <tr align=left><td></td>
@@ -580,7 +604,8 @@ fr: Les lettres accentuées sont en codage ANSI (ISO 8859-1).
 it: I caratteri accentuati sono codificati in ANSI (ISO 8859-1).
 lv: Uzsvçrtie burti ir ANSI kodçjumâ (ISO 8859-1).
 sv: De accentuerade tecknen är ANSI kodade (ISO 8859-1).
-]</label></td>
+]
+</label></td>
 </tr>
 
 <tr align=left><td></td>
@@ -594,7 +619,8 @@ fr: Les lettres accentuées sont en codage ASCII.
 it: I caratteri accentuati sono codificati in ASCII.
 lv: Uzsvçrtie burti ir ASCII kodçjumâ.
 sv: De accentuerade tecknen är ASCII kodade.
-]</label></td>
+]
+</label></td>
 </tr>
 
 <tr align=left><td></td>
@@ -608,7 +634,8 @@ fr: Les lettres accentuées sont en codage MSDOS.
 it: I caratteri accentuati sono codificati in MSDOS.
 lv: Uzsvçrtie burti ir MSDOS kodçjumâ.
 sv: De accentuerade tecknen är MS-DOS kodade.
-]</label></td>
+]
+</label></td>
 </tr>
 </table>
 <p>
