--- a/bin/setup/lang/gw2gd_ok.htm
+++ b/bin/setup/lang/gw2gd_ok.htm
@@ -16,7 +16,8 @@ fr: Opération terminée
 it: Operazione terminata
 lv: Darbîba pabeigta
 sv: Operationen klar
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -70,7 +71,8 @@ es: Este fichero se encuentra en la carpeta
 fi: Tämä tiedosto on hakemistossa
 fr: Ce fichier se trouve dans le répertoire
 it: Questo file si trova nella directory
-] "%w".
+]
+"%w".
 
 <p />
 
