--- a/bin/setup/lang/gwb2ged.htm
+++ b/bin/setup/lang/gwb2ged.htm
@@ -17,7 +17,8 @@ fr: Extraction d’un fichier GEDCOM
 it: Estrazione di un file GEDCOM
 lv: Izveidot GEDCOM datni
 sv: Exportera en GEDCOM-fil
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 <body %Vbody_prop;>
@@ -67,7 +68,8 @@ fr: il n’y a aucune base de données actuellement
 it: attualmente non esiste nessuna base di dati
 lv: nav nevienas datu bâzes
 sv: det finns ingen databas för tillfället
-]</tr></td>}
+]
+</tr></td>}
 
 </table>
 
@@ -94,7 +96,8 @@ lv: Ierakstiet Jûsu izvçlçto GEDCOM datnes nosaukumu. Ja Jûs to
     paplaðinâjumu
 sv: Skriv namnet du vill kalla din GEDCOM-fil. Om du inte skriver
     någonting, kommer det att bli samma namn som databasen avslutat med
-] "<tt>.ged</tt>".
+]
+"<tt>.ged</tt>".
 
 <p>
 <table class="setup">
@@ -130,7 +133,8 @@ fr: Coder les caractères en ASCII.
 it: Codificare i caratteri in ASCII.
 lv: Burti ASCII kodçjumâ.
 sv: Koda tecknen i ASCII.
-]</label></td>
+]
+</label></td>
 </tr>
 
 <tr align="left"><td>
@@ -144,7 +148,8 @@ fr: Coder les caractères en UTF-8.
 it: Codificare i caratteri in UTF-8.
 lv: Burti UTF-8 kodçjumâ.
 sv: Koda tecknen i UTF-8.
-]</label></td>
+]
+</label></td>
 </tr>
 
 <tr align="left"><td>
@@ -157,7 +162,8 @@ fr: Coder les caractères en ANSEL.
 it: Codificare i caratteri in ANSEL.
 lv: Burti ANSEL kodçjumâ.
 sv: Koda tecknen i ANSEL.
-]</label></td>
+]
+</label></td>
 </tr>
 
 <tr align="left"><td>
@@ -170,7 +176,8 @@ fr: Coder les caract&egrave;res en ANSI (ISO 8859-1).
 it: Codificare i caratteri in ANSI (ISO 8859-1).
 lv: Burti ANSI kodçjumâ (ISO 8859-1).
 sv: Koda tecknen i ANSI (ISO 8859-1).
-]</label></td>
+]
+</label></td>
 </tr>
 </table></dl>
 <p>
@@ -189,7 +196,8 @@ it: : economizzare lo spazio-memoria durante l'operazione
     (che però sarà più lenta)
 lv: : darbîbas laikâ taupît operatîvo atmiòu (darbîba notiks lçnâk).
 sv: : spara minne under operationen (men det kommer att gå saktare).
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -199,7 +207,8 @@ sv: : spara minne under operationen (men det kommer att gå saktare).
 <label for=nn>-nn</label>[
 en: : Do not extract notes.
 fr:  : ne pas extraire les notes.
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -209,7 +218,8 @@ fr:  : ne pas extraire les notes.
 <label for=nopicture>-nopicture</label>[
 en: : Dont extract individual pictures (portraits).
 fr:  : ne pas extraire les images individuelles (portraits).
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -219,7 +229,8 @@ fr:  : ne pas extraire les images individuelles (portraits).
 <label for=picture-path>-picture-path</label>[
 en: : Extract individual pictures path (portraits).
 fr:  : extraire le chemin des images individuelles (portraits).
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -239,7 +250,8 @@ fr:  : n’extraire que les ancêtres de…
 it: : estrarre solamente gli antenati di…
 lv: : izmantot tikai…
 sv: : exportera endast anorna till…
-]</td></tr>
+]
+</td></tr>
 
 <tr align=left><td>[
 de: Vorname
@@ -249,7 +261,8 @@ fr: Prénom
 it: Nome
 lv: Vârds
 sv: Förnamn
-]</td>
+]
+</td>
 <td><input name="a1" size=30 maxlength=200></td>
 
 <td>[
@@ -260,7 +273,8 @@ fr: Num
 it: Numero
 lv: Nr
 sv: Nummer
-]</td>
+]
+</td>
 <td><input name="a2" size=5 maxlength=8></td>
 </tr>
 
@@ -272,7 +286,8 @@ fr: Nom
 it: Cognome
 lv: Uzvârds
 sv: Efternamn
-]</td>
+]
+</td>
 <td colspan=3><input name="a3" size=40 maxlength=200></td>
 </tr>
 </table>
@@ -286,7 +301,8 @@ es: : extraer solamente los descendientes de…
 fr:  : n’extraire que les descendants de…
 it: : estrarre solamente i discendenti di…
 lv: : izmantot tikai…
-]</td>
+]
+</td>
 </tr>
 
 <tr align=left><td>[
@@ -296,7 +312,8 @@ es: Nombre
 fr: Prénom
 it: Nome
 lv: Vârds
-]</td>
+]
+</td>
 <td><input name="d1" size=30 maxlength=200></td>
 
 <td>[
@@ -306,7 +323,8 @@ es: Núm
 fr: Num
 it: Numero
 lv: Nr
-]</td>
+]
+</td>
 <td><input name="d2" size=5 maxlength=8></td></tr>
 
 <tr align=left><td>[
@@ -353,7 +371,8 @@ sv: Om du väljer de båda valen ovan, kommer
 -aws[
 en: : Extract ancestors with siblings of…
 fr:  : extraire les ancêtres avec fratries de…
-]</td>
+]
+</td>
 </tr>
 
 <tr align=left><td>[
@@ -363,7 +382,8 @@ es: Nombre
 fr: Prénom
 it: Nome
 lv: Vârds
-]</td>
+]
+</td>
 <td><input name="aws1" size=30 maxlength=200></td>
 
 <td>[
@@ -373,7 +393,8 @@ es: Núm
 fr: Num
 it: Numero
 lv: Nr
-]</td>
+]
+</td>
 <td><input name="aws2" size=5 maxlength=8></td></tr>
 
 <tr align=left><td>[
@@ -394,7 +415,8 @@ lv: Uzvârds
 -s[
 en: : extract surname (usable several times).
 fr:  : extraire un nom de famille (utilisable plusieurs fois).
-]</td>
+]
+</td>
 </tr>
 
 <tr align=left><td>[
@@ -417,7 +439,8 @@ en: : When a person is born less than <num> years ago, it is not exported unless
     All the spouses and descendants are also censored.
 fr:  : quand une personne est née il y a moins de … années, elle n’est pas exportée sauf<br>
     si elle est "publique". La censure s’applique aux époux et descendants. 
-]</td>
+]
+</td>
 </tr>
 
 <tr align=left><td>[
@@ -436,7 +459,8 @@ fr: Années
 <label for=nsp>-nsp</label>[
 en: : Do not extract spouses' parents (for options -s and -d).
 fr:  : ne pas extraire les parents des époux (pour les options -s et -d).
-]</td>
+]
+</td>
 </tr>
 </table>
 
@@ -462,6 +486,7 @@ fr: Extraire
 it: Estrarre
 lv: Extract
 sv: Exportera
-]">
+]
+">
 </ul>
 </form>
