--- a/bin/setup/lang/gwc.htm
+++ b/bin/setup/lang/gwc.htm
@@ -15,7 +15,8 @@ fr: Importation d’un fichier GeneWeb
 it: Importazione di un file GeneWeb
 lv: GeneWeb resursdatnes imports
 sv: Importera en GeneWeb källfil
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -85,7 +86,8 @@ fr: ou donnez directement le nom du ou des fichiers source GeneWeb en complémen
 <tr><td valign="top">[
 en: Note:
 fr: Note :
-]</td>
+]
+</td>
 <td>[
 en: ../ allows you to reach the parent directory.<br>
     In the Windows world, this will be
@@ -95,7 +97,8 @@ fr: ../ vous permet de naviguer vers le dossier parent.<br>
     Dans le monde Windows, ceci ne
     vous permettra pas de changer la lettre du disque (C: -> D:), mais vous pouvez faire
     ce changement directement dans l'url dans le navigateur.
-]</td></tr>
+]
+</td></tr>
 </table>
 </span>
 <p>
@@ -166,7 +169,8 @@ it: Visualizzare alcune statistiche
 lv: Beigâs parâdît darbîbas statistiku
     (tâ bûs redzama programas darbîbâs pçdâs).
 sv: Visa statistik på slutet (den kommer att synas i utskriften).
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -181,7 +185,8 @@ fr: Ne pas vérifier la cohérence des données.
 it: Non verificare la coerenza dei dati.
 lv: Nepârbaudît datu saskanîbu.
 sv: Kontrollera inte att databasens data är OK.
-]</td></tr>
+]
+</td></tr>
 </table>
 <p>
 <table class="setup">
@@ -195,7 +200,8 @@ fr: Terminer par le précalcul de consanguinité.
 it: Terminare con il pre-calcolo di consanguineità.
 lv: Nobeigt ar asinsradniecîbas pârrçíinu.
 sv: Avsluta med att beräkna blodsbanden.
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -205,7 +211,8 @@ sv: Avsluta med att beräkna blodsbanden.
 <td>[
 en: Delete database if already existing.
 fr: Détruire la base pré-existante.
-]</td>
+]
+</td>
 </tr>
 </table>
 
