--- a/bin/setup/lang/gwd.htm
+++ b/bin/setup/lang/gwd.htm
@@ -15,7 +15,8 @@ fr: Paramètres de gwd
 it: Parametri di gwd
 lv: "gwd" parametri
 sv: Parametrar för "gwd"
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -434,6 +435,7 @@ fr: Configurer
 it: Configurare
 lv: Configure
 sv: Konfigurera
-]">
+]
+">
 </ul>
 </form>
