--- a/bin/setup/lang/gwd_info.htm
+++ b/bin/setup/lang/gwd_info.htm
@@ -16,7 +16,8 @@ it: Service gwd
 lv: Gwd serviss
 sv: Servicen gwd
 lv: Gwd serviss
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -65,7 +66,8 @@ lv: Windows vidç - dubultklikðíis uz "gwd" ikoniòas un tad atgriezieties
 sv: Under Windows, dubbelklicka på "gwd" ikonen, gå sedan tillbaka hit.
 lv: Windows vidç - dubultklikðíis uz "gwd" ikoniòas un tad atgriezieties
     ðeit.
-]</ul>
+]
+</ul>
 
 <p>
 
@@ -163,7 +165,8 @@ lv: Windows vai Unix vidç - nospiediet "ctrl C" pie aktîva loga, kurâ tas
 sv: Under Windows eller Unix, tryck "control C" i fönstret där den körs.
 lv: Windows vai Unix vidç - nospiediet "ctrl C" pie aktîva loga, kurâ tas
     darbojas.
-]</ul>
+]
+</ul>
 
 <p>
 
