--- a/bin/setup/lang/gwd_ok.htm
+++ b/bin/setup/lang/gwd_ok.htm
@@ -15,7 +15,8 @@ fr: Paramètres mis-à-jour
 it: Parametri aggiornati
 lv: Mainîti parametri
 sv: Parametrar uppdaterade
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -60,7 +61,8 @@ lv: Lai parametru maiòa iedarbotos, <a
 sv: För att parametrarna ska kunna börja användas, måste <a
     href="gwsetup?lang=%l;v=gwd_info.htm">gwd servicen</a> stoppas,
     om den var igång, och sedan återstartad.
-]</font>
+]
+</font>
 
 <p>
 
@@ -110,7 +112,8 @@ es: fichero vacio
 fr: fichier vide
 it: file vuoto
 sv: tom fil
-] -}
+]
+-}
 </pre>
 </dl>
 
