--- a/bin/setup/lang/gwdiff.htm
+++ b/bin/setup/lang/gwdiff.htm
@@ -10,7 +10,8 @@
   <title>[
 en: Compute the difference between two bases
 fr: Détection des différences entre deux bases
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -51,7 +52,8 @@ fr: il n’y a aucune base de données actuellement
 it: attualmente non esiste nessuna base di dati
 lv: nav nevienas datu bâzes
 sv: det finns ingen databas för tillfället
-]</tr></td>}
+]
+</tr></td>}
 </table>
 <p>
 <table class="setup">
@@ -60,7 +62,8 @@ en: Starting person in first base.<br>
     <span style="color:#FF0000;">Mandatory parameter</span>
 fr: Personne racine dans la première base.<br>
     <span style="color:#FF0000;">Paramètre obligatoire</span>
-]</td></tr>
+]
+</td></tr>
 
 <tr align=left><td>[
 de: Vorname
@@ -70,7 +73,8 @@ fr: Prénom
 it: Nome
 lv: Vârds
 sv: Förnamn
-]</td>
+]
+</td>
 <td><input name="a1" size=30 maxlength=200></td>
 
 <td>[
@@ -81,7 +85,8 @@ fr: Num
 it: Numero
 lv: Num
 sv: Nummer
-]</td>
+]
+</td>
 <td><input name="a2" size=5 maxlength=8></td></tr>
 
 <tr align=left><td>[
@@ -92,7 +97,8 @@ fr: Nom
 it: Cognome
 lv: Uzvârds
 sv: Efternamn
-]</td>
+]
+</td>
 <td colspan=3><input name="a3" size=40 maxlength=200></td></tr>
 </table>
 </ul>
@@ -118,7 +124,8 @@ en: Starting person in second base.<br>
     <span style="color:#FF0000;">Mandatory parameter</span>
 fr: Personne racine dans la seconde base.<br>
     <span style="color:#FF0000;">Paramètre obligatoire</span>
-]</td></tr>
+]
+</td></tr>
 
 <tr align=left><td>[
 de: Vorname
@@ -128,7 +135,8 @@ fr: Prénom
 it: Nome
 lv: Vârds
 sv: Förnamn
-]</td>
+]
+</td>
 <td><input name="b1" size=30 maxlength=200></td>
 
 <td>[
@@ -139,7 +147,8 @@ fr: Num
 it: Num
 lv: Num
 sv: Nummer
-]</td>
+]
+</td>
 <td><input name="b2" size=5 maxlength=8></td></tr>
 
 <tr align=left><td>[
@@ -150,7 +159,8 @@ fr: Nom
 it: Cognome
 lv: Uzvârds
 sv: Efternamn
-]</td>
+]
+</td>
 <td colspan=3><input name="b3" size=40 maxlength=200></td></tr>
 </table>
 </ul>
@@ -175,7 +185,8 @@ sv: Välj de optioner du vill ha:
 <td>[
 en: Checks descendants of all ascendants .
 fr: Vérifier tous les descendants des ascendants.
-]</td>
+]
+</td>
 </tr>
 </table></dl>
 
@@ -185,7 +196,8 @@ fr: Vérifier tous les descendants des ascendants.
 <td>[
 en: Checks descendants (default).
 fr: Vérifier les descendants (par défaut).
-]</td>
+]
+</td>
 </tr>
 </table></dl>
 
@@ -204,7 +216,8 @@ it: Economizzare lo spazio-memoria durante l'operazione
     (che però sarà più lenta).
 lv: Taupît operatîvo atmiòu (process notiks lçnâk).
 sv: Spara minne under operationen (men det kommer att gå saktare).
-]</td>
+]
+</td>
 </tr>
 </table></dl>
 
@@ -217,7 +230,8 @@ sv: Spara minne under operationen (men det kommer att gå saktare).
 <input type="input" name="o" size="20" maxlength="50" style="padding-left:4px"></label>&nbsp;&nbsp;[
 en: Output results to this file.
 fr: Rediriger les résultats vers ce fichier.
-]</td>
+]
+</td>
 </tr>
 </table></dl>-->
 <p>
@@ -237,6 +251,7 @@ sv: Tryck sedan på denna knapp:
 [
 en: Compare
 fr: Comparer
-]">
+]
+">
 </ul>
 </form>
