--- a/bin/setup/lang/gwf.htm
+++ b/bin/setup/lang/gwf.htm
@@ -15,7 +15,8 @@ fr: Paramètres
 it: Parametri
 lv: Parametri
 sv: parametrar
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -68,7 +69,8 @@ fr: il n’y a aucune base de données actuellement
 it: attualmente non esiste nessuna base di dati
 lv: patreiz nav nevienas datu bazes
 sv: det finns ingen databas för tillfället
-]</tr></td>}
+]
+</tr></td>}
 </table>
 
 <p>
@@ -93,6 +95,7 @@ fr: Configurer
 it: Configurare
 lv: Darîts
 sv: Konfigurera
-]">
+]
+">
 </ul>
 </form>
