--- a/bin/setup/lang/gwf_1.htm
+++ b/bin/setup/lang/gwf_1.htm
@@ -15,7 +15,8 @@ fr: Paramètres "%a"
 it: Parametri
 lv: "%a" parametri
 sv: Parametrar "%a"
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -444,7 +445,8 @@ it: Se è "-", è la lingua per difetto del comando "gwd"
     che sarà presa in considerazione.
 lv: Ja atstâsiet vçrtîbu "-", noklusçtâ valoda bûs tâ pati, kas "gwd" komandai.
 sv: Om det är "-", kommer det förvalda språket för kommandot "gwd" att gälla.
-]</td>
+]
+</td>
 
 </tr>
 
@@ -927,7 +929,8 @@ it: Se questa zona è vuota, tutti sono "Wizard". Potete lasciare
     dall'esterno.
 lv: Ja ðis lodziòð tiks atsâts tukðs, tad ikviens tiks uzskatîts par "burvi".
 sv: Om den lämnas tom, är alla en "wizard".
-]</td>
+]
+</td>
 </tr>
 
 <tr align=left>
@@ -1047,7 +1050,8 @@ fr: Cache les noms des personnes privées, c’est-à-dire les personnes
     vivantes, ou plus exactement, celles de moins de 100 ans.
 it: Nasconde i nomi delle persone private, ovvero le persone in vita
     o più esattamente quelle che hanno meno di 100 anni.
-]</td>
+]
+</td>
 </tr>
 
 <tr align=left>
@@ -1121,7 +1125,8 @@ lv: Tas var bût noderîgi, ja nepiecieðams kâdai personai pievienot attçlu,
 sv: Det kan vara användbart lokalt, när man vill sätta in en bild av någon,
     därför att proceduren lägger in bilden automatiskt på rätt plats och
     med rätt filnamn.
-]</td>
+]
+</td>
 </tr>
 
 <tr align=left>
@@ -1278,6 +1283,7 @@ fr: Appliquer
 it: Applicare
 lv: Darîts
 sv: Sätt
-]">
+]
+">
 </ul>
 </form>
