--- a/bin/setup/lang/gwfix.htm
+++ b/bin/setup/lang/gwfix.htm
@@ -10,7 +10,8 @@
   <title>[
 en: Fix base and recompute index
 fr: Corrige une base et reclacule l'index
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -51,7 +52,8 @@ fr: il n’y a aucune base de données actuellement
 it: attualmente non esiste nessuna base di dati
 lv: nav nevienas datu bâzes
 sv: det finns ingen databas för tillfället
-]</tr></td>}
+]
+</tr></td>}
 </table>
 <p>
 
@@ -65,7 +67,8 @@ fr: Sélectionnez les options que vous désirez :
 it: Selezionate le opzioni desiderate:
 lv: Izvçlieties atbilstoðos parametrus:
 sv: Välj de optioner du vill ha:
-]<br>
+]
+<br>
 [
 en: (no selection is equivalent to select all).
 fr: (aucune option est équivalent à les sélectionner toutes). 
@@ -78,7 +81,8 @@ fr: (aucune option est équivalent à les sélectionner toutes).
 <td>[
 en: do not commit changes (only traces).
 fr: ne pas effectuer les changements (traces seules).
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -88,7 +92,8 @@ fr: ne pas effectuer les changements (traces seules).
 <td>[
 en: quiet mode.
 fr: peu de traces.
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -98,7 +103,8 @@ fr: peu de traces.
 <td>[
 en: very quiet mode.
 fr: pas de traces du tout.
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -108,7 +114,8 @@ fr: pas de traces du tout.
 <td>[
 en: fast mode. Needs more memory
 fr: mode rapide. Nécessite plus de mémoire.
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -118,7 +125,8 @@ fr: mode rapide. Nécessite plus de mémoire.
 <td>[
 en: families' parents.
 fr: families' parents.
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -128,7 +136,8 @@ fr: families' parents.
 <td>[
 en: families' children.
 fr: families' children.
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -138,7 +147,8 @@ fr: families' children.
 <td>[
 en: persons' NBDS.
 fr: persons' NBDS.
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -148,7 +158,8 @@ fr: persons' NBDS.
 <td>[
 en: persons' parents.
 fr: persons' parents.
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -158,7 +169,8 @@ fr: persons' parents.
 <td>[
 en: persons' families.
 fr: persons' families.
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -168,7 +180,8 @@ fr: persons' families.
 <td>[
 en: pevents' witnesses.
 fr: pevents' witnesses.
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -178,7 +191,8 @@ fr: pevents' witnesses.
 <td>[
 en: fevents' witnesses.
 fr: fevents' witnesses.
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -188,7 +202,8 @@ fr: fevents' witnesses.
 <td>[
 en: marriage divorce.
 fr: marriage divorce.
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -198,7 +213,8 @@ fr: marriage divorce.
 <td>[
 en: index. Automatically enabled by any other option
 fr: index. Activé automatiquement par les autres options
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -208,7 +224,8 @@ fr: index. Activé automatiquement par les autres options
 <td>[
 en: help.
 fr: help.
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -229,6 +246,7 @@ sv: Tryck sedan på denna knapp:
 [
 en: Fix base
 fr: Fix base
-]">
+]
+">
 </ul>
 </form>
