--- a/bin/setup/lang/gwu.htm
+++ b/bin/setup/lang/gwu.htm
@@ -13,7 +13,8 @@ fr: Extraction d’un fichier GeneWeb
 it: Estrazione di un file GeneWeb
 lv: Izveidot GeneWeb datni
 sv: Exportera en GeneWeb källfil
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -63,7 +64,8 @@ fr: il n’y a aucune base de données actuellement
 it: attualmente non esiste nessuna base di dati
 lv: nav nevienas datu bâzes
 sv: det finns ingen databas för tillfället
-]</tr></td>}
+]
+</tr></td>}
 
 </table>
 
@@ -156,7 +158,8 @@ it: Economizzare lo spazio-memoria durante l'operazione
     (che però sarà più lenta).
 lv: Taupît operatîvo atmiòu (process notiks lçnâk).
 sv: Spara minne under operationen (men det kommer att gå saktare).
-]</td>
+]
+</td>
 </tr>
 </table>
 <p>
@@ -169,7 +172,8 @@ fr: N’extraire que les ancêtres de…
 it: Estrarre solo gli antenati di…
 lv: Atlasît tikai dotâs personas priekðteèus…
 sv: Exportera endast anorna till…
-]</td></tr>
+]
+</td></tr>
 
 <tr align=left><td>[
 de: Vorname
@@ -179,7 +183,8 @@ fr: Prénom
 it: Nome
 lv: Vârds
 sv: Förnamn
-]</td>
+]
+</td>
 <td><input name="a1" size=30 maxlength=200></td>
 
 <td>[
@@ -190,7 +195,8 @@ fr: Num
 it: Numero
 lv: Num
 sv: Nummer
-]</td>
+]
+</td>
 <td><input name="a2" size=5 maxlength=8></td></tr>
 
 <tr align=left><td>[
@@ -201,7 +207,8 @@ fr: Nom
 it: Cognome
 lv: Uzvârds
 sv: Efternamn
-]</td>
+]
+</td>
 <td colspan=3><input name="a3" size=40 maxlength=200></td></tr>
 </table>
 <p>
@@ -214,7 +221,8 @@ fr: N’extraire que les descendants de…
 it: Estrarre solo i discendenti di…
 lv: Atlasît tikai dotâs personas pçcteèus …
 sv: Exportera endast ättlingarna till…
-]</td></tr>
+]
+</td></tr>
 
 <tr align=left><td>[
 de: Vorname
@@ -224,7 +232,8 @@ fr: Prénom
 it: Nome
 lv: Vârds
 sv: Förnamn
-]</td>
+]
+</td>
 <td><input name="d1" size=30 maxlength=200></td>
 
 <td>[
@@ -235,7 +244,8 @@ fr: Num
 it: Num
 lv: Num
 sv: Nummer
-]</td>
+]
+</td>
 <td><input name="d2" size=5 maxlength=8></td></tr>
 
 <tr align=left><td>[
@@ -246,7 +256,8 @@ fr: Nom
 it: Cognome
 lv: Uzvârds
 sv: Efternamn
-]</td>
+]
+</td>
 <td colspan=3><input name="d3" size=40 maxlength=200></td></tr>
 </table>
 <p>
@@ -297,6 +308,7 @@ fr: Extraire
 it: Estrazione
 lv: Izveidot
 sv: Exportera
-]">
+]
+">
 </ul>
 </form>
