--- a/bin/setup/lang/gwu_ok.htm
+++ b/bin/setup/lang/gwu_ok.htm
@@ -15,7 +15,8 @@ fr: Opération terminée
 it: Operazione terminata
 lv: Darîts
 sv: Operationen klar
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -102,7 +103,8 @@ it: file vuoto
 lv: datne ir tukða
 sv: tom fil
 lv: datne ir tukða
-] -}
+]
+-}
 </pre>
 <p>
 [
