--- a/bin/setup/lang/list.htm
+++ b/bin/setup/lang/list.htm
@@ -16,7 +16,8 @@ fr: Bases de données
 it: Basi di dati
 lv: Datubâzes
 sv: Databaser
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -73,7 +74,8 @@ fr: il n’y a aucune base de données actuellement
 it: attualmente non esiste nessuna base di dati
 lv: patreiz nav nevienas datu bâzes
 sv: det finns ingen databas för närvarande
-]}
+]
+}
 
 </ul>
 
