--- a/bin/setup/lang/main.htm
+++ b/bin/setup/lang/main.htm
@@ -16,7 +16,8 @@ fr: Menu principal
 it: Menu principale
 lv: Galvenâ izvçlne
 sv: Huvudmeny
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -31,7 +32,8 @@ fr: Menu principal
 it: Menu principale
 lv: Galvenâ izvçlne
 sv: Huvudmeny
-]</font></h1></center>
+]
+</font></h1></center>
 
 <p />
 
@@ -44,7 +46,8 @@ fr: Consulter…
 it: Consultare…
 lv: Darboties ar…
 sv: Konsultera…
-]</b>
+]
+</b>
 
 <p />
 
@@ -93,7 +96,8 @@ fr: Créer une base de données…
 it: Creare una base di dati…
 lv: Izveidot datu bâzi…
 sv: Skapa en databas…
-]</b>
+]
+</b>
 
 <p />
 
@@ -179,7 +183,8 @@ fr: Extraire d’une base de données…
 it: Estrarre da una base di dati…
 lv: Izveidot no datu bâzes…
 sv: Exportera från en databas…
-]</b>
+]
+</b>
 
 <p />
 
@@ -220,7 +225,8 @@ fr: Appliquer sur une base de données…
 it: Applicare su una base di dati…
 lv: Veikt sekojoðas darbîbas ar datu bâzi…
 sv: Applicera på en databas…
-]</b>
+]
+</b>
 
 <p />
 
@@ -324,7 +330,8 @@ fr: Configurer…
 it: Configurare…
 lv: Mainît…
 sv: Konfigurera…
-]</b>
+]
+</b>
 
 <p>
 
