--- a/bin/setup/lang/merge.htm
+++ b/bin/setup/lang/merge.htm
@@ -12,7 +12,8 @@ en: Merging databases
 fr: Fusion de bases de données
 it: Fusione di basi di dati
 sv: Sammanslagning av databaser
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -100,7 +101,8 @@ en: there is no database at present
 fr: il n’y a aucune base de données actuellement
 it: attualmente non esiste nessuna base di dati
 sv: det finns ingen databas för närvarande
-]</tr></td>}
+]
+</tr></td>}
 </table>
 <p>
 <li>
@@ -132,7 +134,8 @@ en: Merge
 fr: Fusionner
 it: Fondere
 sv: Slåsamman
-]">
+]
+">
 </ul>
 </form>
 <p>
