--- a/bin/setup/lang/merge_1.htm
+++ b/bin/setup/lang/merge_1.htm
@@ -13,7 +13,8 @@ en: Merging databases
 fr: Fusion de bases de données
 it: Fusione di basi di dati
 sv: Sammanslagning av databaser
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -51,7 +52,8 @@ it: Attenzione</b>: existe già una base chiamata "%o" nella
 sv: Varning</b>: det finns redan en databas med namnet "%o" i din
     <a href = "gwsetup?lang=%l;v=list.htm">katalog</a>. Om du trycker knappen
     "OK" nedan, kommer den att raderas.
-]<p>
+]
+<p>
 
 [
 de: Wenn du diese Operation gerade schonmal durchgeführt hat, war das 
@@ -71,7 +73,8 @@ it: Se avete appena effettuato questa operazione, si
 sv: Om du just gjorde detta, är den nu nog raderad och därför är det
     inte viktigt. Annars, återvänd till föregående sida och välj ett annat
     namn för din databas.
-]<p>}
+]
+<p>}
 
 <p>
 
@@ -117,13 +120,15 @@ fr: Appuyez sur le bouton ci-dessous pour créer votre base de
     données
 it: Cliccate sul bottone qui sotto per creare la vostra base di dati
 sv: Klicka knappen nedan för att skapa din databas
-]%v{<br><blink><font color=red>[
+]
+%v{<br><blink><font color=red>[
 de:  und die vorige Datenbank "%o" im Zielverzeichnis zu überschreiben
 en: , and overwrite the previous database "%o" of the target directory
 fr:  et écraser la base "%o" du répertoire d’arrivée
 it: e cancellare la base "%o" dalla directory di destinazione
 sv:  och skriva över den tidigare databasen "%o" i mål katalogen
-]</font></blink>}:
+]
+</font></blink>}:
 
 <p>
 
@@ -131,7 +136,8 @@ sv:  och skriva över den tidigare databasen "%o" i mål katalogen
 %h
 <dl><dt><dd>
 <input type=submit value="Ok">
-<input type=submit name=cancel value="[cancel]">
+<input type=submit name=cancel value="[cancel]
+">
 </dl>
 </form>
 
