--- a/bin/setup/lang/recover.htm
+++ b/bin/setup/lang/recover.htm
@@ -15,7 +15,8 @@ fr: Récupérer une base - Phase 1
 it: Recuperare una base - Fase 1
 lv: Datu bâzes atjauninâðana - 1. fâze
 sv: Återskapa en databas - fas 1
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -88,6 +89,7 @@ fr: Chercher
 it: Cercare
 lv: Meklçt
 sv: Sök
-]">
+]
+">
 
 </form>
