--- a/bin/setup/lang/recover1.htm
+++ b/bin/setup/lang/recover1.htm
@@ -15,7 +15,8 @@ fr: Récupérer une base - Phase 2
 it: Recuperare una base - Fase 2
 lv: Datu bâzes atjauninâðana - 2. fâze
 sv: Återskapa en databas - fas 2
-]</title>
+]
+</title>
 %fsetup.css;</head>
 
 <body %Vbody_prop;>
@@ -78,7 +79,8 @@ fr: il n’y a aucune base de données dans ce
 it: in questa directory non esiste nessuna base di dati
 lv: ðinî katalogâ nav nevienas datu bâzes
 sv: det finns inga databaser i denna katalog
-]</tr></td>}
+]
+</tr></td>}
 
 </table></dl>
 
@@ -142,7 +144,8 @@ lv: Atjaunot caur GEDCOM datni. Vispâr tas nav ieteicams, bet ja parastajâ
     variantâ atjauninâðana neizdodas, tad izmçìiniet ðo iespçju.
 sv: Gå genom en GEDCOM-fil. Det är inte rekommenderat, men om det
     inte fungerar med den normala proceduren, försök med detta.
-]</td>
+]
+</td>
 </tr>
 
 </table></dl>
@@ -169,5 +172,6 @@ fr: Récupérer
 it: Recuperare
 lv: Atjauninât
 sv: Återskapa
-]">
+]
+">
 </form>
