--- a/bin/setup/lang/recover2.htm
+++ b/bin/setup/lang/recover2.htm
@@ -15,7 +15,8 @@ fr: Récupérer une base - Phase 3
 it: Recuperare una base - Fase 3
 lv: Datu bâzes atjauninâðana - 3. fâze
 sv: Återskapa en databas - fas 3
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -80,7 +81,8 @@ sv: Varning: det finns redan en databas benämnd "%o" i
     <a href="gwsetup?lang=%l;v=list.htm">målkatalogen</a>. Om du
     trycker på knappen nedan kommer den att raderas.
     Om du inte vill det, gå tillbaka och välj ett annat namn för din databas.
-]<p>}
+]
+<p>}
 
 [
 de: Startverzeichnis und Datenbank:
@@ -141,7 +143,8 @@ fr: Appuyez sur le bouton ci-dessous pour lancer l’opération
 it: Cliccate sul bottone qui sotto per lanciare l'operazione
 lv: Nospiediet zemâk esoðo podziòu, lai uzsâktu datu bâzes atjauninâðanu
 sv: Tryck på knappen nedan för att starta operationen
-]%v{<br><blink><font color=red>[
+]
+%v{<br><blink><font color=red>[
 de:  und die Datenbank "%o" im Zielverzeichnis zu löschen
 en: , and overwrite the database "%o" of the destination directory
 es:  y destruir la "%o" de la carpeta final
@@ -149,7 +152,8 @@ fr:  et écraser la base "%o" du répertoire d’arrivée
 it:  e cancellate la base "%o" nella directory finale
 lv: , un pârrakstîtu datu bâzi "%o" mçría katalogâ
 sv:  och radera databasen "%o" i målkatalogen
-]</font></blink>}:
+]
+</font></blink>}:
 
 <p>
 
@@ -157,7 +161,8 @@ sv:  och radera databasen "%o" i målkatalogen
 %h
 <dl><dt><dd>
 <input type=submit value="Ok">
-<input type=submit name=cancel value="[cancel]">
+<input type=submit name=cancel value="[cancel]
+">
 </dl>
 </form>
 
