--- a/bin/setup/lang/ren_ok.htm
+++ b/bin/setup/lang/ren_ok.htm
@@ -15,7 +15,8 @@ fr: Opération terminée
 it: Operazione terminata
 lv: Darîts
 sv: Operationen klar
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -63,7 +64,8 @@ fr: il n’y a aucune base de données actuellement
 it: attualmente non esiste nessuna base di dati
 lv: nav nevienas datu bâzes
 sv: det finns ingen databas för tillfället
-]}
+]
+}
 
 </ul>
 
