--- a/bin/setup/lang/rename.htm
+++ b/bin/setup/lang/rename.htm
@@ -15,7 +15,8 @@ fr: Renommage
 it: Cambio di nome
 lv: Pârsaukðana
 sv: Döpa om
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -64,7 +65,8 @@ fr: il n’y a aucune base de données actuellement
 it: attualmente non esiste nessuna base di dati
 lv: nav nevienas datu bâzes
 sv: det finns ingen databas för tillfället
-]</tr></td>}
+]
+</tr></td>}
 </table>
 
 <p>
@@ -90,6 +92,7 @@ fr: Renommer
 it: Cambio di nome
 lv: Pârsaukt
 sv: Döp om
-]">
+]
+">
 </ul>
 </form>
