--- a/bin/setup/lang/simple.htm
+++ b/bin/setup/lang/simple.htm
@@ -16,7 +16,8 @@ fr: Méthode simple
 it: Metodo semplice
 lv: Vienkârðâ metode
 sv: Enkel metod
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -76,6 +77,7 @@ fr: Créer
 it: Creare
 lv: Izviedot
 sv: Skapa
-]">
+]
+">
 </ul>
 </form>
