--- a/bin/setup/lang/traces.htm
+++ b/bin/setup/lang/traces.htm
@@ -17,7 +17,8 @@ it: Traccia dell'ultimo comando
 lv: Pçdçjâs komandas izpildes pçdas
 sv: Utskriften från det senaste kommandot
 lv: Pçdçjâs komandas izpildes pçdas
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -65,7 +66,8 @@ it: file vuoto
 lv: datne ir tukða
 sv: tom fil
 lv: datne ir tukða
-] -}
+]
+-}
 </pre>
 </dl>
 
@@ -84,7 +86,8 @@ fr: pas de traces
 it: nessuna traccia
 lv: no traces
 sv: ingen utskrift
-] -}
+]
+-}
 </pre>
 </dl>
 
