--- a/bin/setup/lang/update_nldb.htm
+++ b/bin/setup/lang/update_nldb.htm
@@ -16,7 +16,8 @@ fr: Update_nldb
 it: Update_nldb
 lv: Update_nldb
 sv: Update_nldb
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -70,7 +71,8 @@ fr: il n’y a aucune base de données actuellement
 it: attualmente non esiste nessuna base di dati
 lv: there is no database at present
 sv: det finns ingen databas för tillfället
-]</tr></td>}
+]
+</tr></td>}
 </table>
 <p>
 <li>
@@ -95,6 +97,7 @@ fr: Update_nldb
 it: Update_nldb
 lv: Update_nldb
 sv: Update_nldb
-]">
+]
+">
 </ul>
 </form>
