--- a/bin/setup/lang/welcome.htm
+++ b/bin/setup/lang/welcome.htm
@@ -100,7 +100,8 @@ fr: un <a href="gwsetup?lang=%l;v=gwb2ged.htm">fichier GEDCOM</a>
 it: un <a href="gwsetup?lang=%l;v=gwb2ged.htm">file GEDCOM</a>
 lv: <a href="gwsetup?lang=%l;v=gwb2ged.htm">GEDCOM datni</a>
 sv: en <a href="gwsetup?lang=%l;v=gwb2ged.htm">GEDCOM-fil</a>
-]  (gwb2ged)
+]
+ (gwb2ged)
 
 <li>[
 co: un <a href="gwsetup?lang=%l;v=gwu.htm">schedariu di fonte GeneWeb</a>
@@ -112,7 +113,8 @@ fr: un <a href="gwsetup?lang=%l;v=gwu.htm">fichier source GeneWeb</a>
 it: un <a href="gwsetup?lang=%l;v=gwu.htm">file sorgente GeneWeb</a>
 lv: <a href="gwsetup?lang=%l;v=gwu.htm">GeneWeb datni</a>
 sv: en <a href="gwsetup?lang=%l;v=gwu.htm">GeneWeb källfil</a>
-] (gwu)
+]
+(gwu)
 
 </ul>
     </div>
@@ -144,7 +146,8 @@ fr: à partir d’un <a href="gwsetup?lang=%l;v=ged2gwb.htm">fichier GEDCOM</a>
 it: partendo da <a href="gwsetup?lang=%l;v=ged2gwb.htm">un file GEDCOM</a>
 lv: no <a href="gwsetup?lang=%l;v=ged2gwb.htm">GEDCOM datnes</a>
 sv: från en <a href="gwsetup?lang=%l;v=ged2gwb.htm">GEDCOM-fil</a>
-] (ged2gwb)
+]
+(ged2gwb)
 
 <li>[
 co: à partesi d'un <a href="gwsetup?lang=%l;v=gwc.htm">schedariu di fonte GeneWeb</a>
@@ -156,7 +159,8 @@ fr: à partir d’un <a href="gwsetup?lang=%l;v=gwc.htm">fichier source GeneWeb<
 it: partendo da un <a href="gwsetup?lang=%l;v=gwc.htm">file sorgente GeneWeb</a>
 lv: no <a href="gwsetup?lang=%l;v=gwc.htm">GeneWeb datnes</a>
 sv: från en <a href="gwsetup?lang=%l;v=gwc.htm">GeneWeb källfil</a>
-] (gwc)
+]
+(gwc)
 
 <li>[
 co: <a href="gwsetup?lang=%l;v=simple.htm">viota</a>
@@ -168,7 +172,8 @@ fr: <a href="gwsetup?lang=%l;v=simple.htm">vide</a>
 it: <a href="gwsetup?lang=%l;v=simple.htm">vuoto</a>
 lv: <a href="gwsetup?lang=%l;v=simple.htm">tukšs</a>
 sv: <a href="gwsetup?lang=%l;v=simple.htm">tom</a>
-] (gwc)
+]
+(gwc)
 
 </ul>
   </div>
@@ -203,7 +208,8 @@ fr: <a href="gwsetup?lang=%l;v=cleanup.htm">Nettoyage</a>
 it: <a href="gwsetup?lang=%l;v=cleanup.htm">Pulizia</a>
 lv: <a href="gwsetup?lang=%l;v=cleanup.htm">Sakopðanu</a>
 sv: <a href="gwsetup?lang=%l;v=cleanup.htm">Upprensning</a>
-] (consang)
+]
+(consang)
 
 <li>[
 co: <a href="gwsetup?lang=%l;v=rename.htm">Cambiu di nome</a>
@@ -249,7 +255,8 @@ fr: <a href="gwsetup?lang=%l;v=save.htm">Sauvegarde et restauration</a>
 it: <a href="gwsetup?lang=%l;v=save.htm">Backup and restore</a>
 lv: <a href="gwsetup?lang=%l;v=save.htm">Saglabâðanu un atjaunoðanu</a>
 sv: <a href="gwsetup?lang=%l;v=save.htm">Spara och återskapa</a>
-] (gwu)
+]
+(gwu)
 
 <li>[
 co: <a href="gwsetup?lang=%l;v=consang.htm">Initialisazione di e consanguinità</a>
@@ -261,7 +268,8 @@ fr: <a href="gwsetup?lang=%l;v=consang.htm">Initialisation des consanguinités</
 it: <a href="gwsetup?lang=%l;v=consang.htm">Inizializzazione delle consanguineità</a>
 lv: <a href="gwsetup?lang=%l;v=consang.htm">Asinsradniecîbas sakârtoðana</a>
 sv: <a href="gwsetup?lang=%l;v=consang.htm">Beräkning av blodsband</a>
-] (consang)
+]
+(consang)
 
 <li>[
 co: <a href="gwsetup?lang=%l;v=update_nldb.htm">Attualisazione di i ligami scheda/cronaca famigliale</a>
@@ -273,25 +281,29 @@ fr: <a href="gwsetup?lang=%l;v=update_nldb.htm">Mise à jour des liens fiche/chr
 it: <a href="gwsetup?lang=%l;v=update_nldb.htm">Aggiornamento pagina dei link / famiglia cronaca</a>
 lv: <a href="gwsetup?lang=%l;v=update_nldb.htm">Atjauninat saites lapu / gimenes hroniku</a>
 sv: <a href="gwsetup?lang=%l;v=update_nldb.htm">Uppdatera länksida / släktkrönika</a>
-] (update_nldb)
+]
+(update_nldb)
 
 <li>[
 co: <a href="gwsetup?lang=%l;v=connex.htm">Calculeghja i cumpunenti cunnessi</a>
 en: <a href="gwsetup?lang=%l;v=connex.htm">Compute connected componants</a>
 fr: <a href="gwsetup?lang=%l;v=connex.htm">Calcule les composantes connexes</a>
-] (connex)
+]
+(connex)
 
 <li>[
 co: <a href="gwsetup?lang=%l;v=gwdiff.htm">Calculeghja a sfarenza trà duie base</a>
 en: <a href="gwsetup?lang=%l;v=gwdiff.htm">Compute the difference between two bases</a>
 fr: <a href="gwsetup?lang=%l;v=gwdiff.htm">Calcule la différence entre deux bases</a>
-] (gwdiff)
+]
+(gwdiff)
 
 <li>[
 co: <a href="gwsetup?lang=%l;v=gwfix.htm">Currege una basa è calculeghja torna l’indici</a>
 en: <a href="gwsetup?lang=%l;v=gwfix.htm">Fixes problems in a base</a>
 fr: <a href="gwsetup?lang=%l;v=gwfix.htm">Corrige les problèmes d'une base</a>
-] (gwfixbase)
+]
+(gwfixbase)
 
 
 </ul>
