--- a/bin/setup/lang/bsi.htm
+++ b/bin/setup/lang/bsi.htm
@@ -16,7 +16,8 @@ fr: Application de "%d"
 it: Applicazione di "%d"
 lv: "%d" lietoðana
 sv: Applicering av "%d"
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
