--- a/bin/setup/lang/bsi_err.htm
+++ b/bin/setup/lang/bsi_err.htm
@@ -7,14 +7,16 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[error]</title>
+  <title>[error]
+</title>
 %fsetup.css;
 </head>
 
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;"><font color=red>[error]</font></h1>
+<h1 style="margin:0;"><font color=red>[error]
+</font></h1>
 </div>
 
 
@@ -67,7 +69,8 @@ fr: pas de traces
 it: nessuna traccia
 lv: no traces
 sv: ingen utskrift
-] -}
+]
+-}
 </pre>
 </dl>
 
@@ -90,7 +93,8 @@ fr: pas de traces
 it: nessuna traccia
 lv: no traces
 sv: ingen utskrift
-] -}
+]
+-}
 </pre>
 </dl>
 
