--- a/bin/setup/lang/gwf_ok.htm
+++ b/bin/setup/lang/gwf_ok.htm
@@ -15,7 +15,8 @@ fr: Paramètres mis-à-jour
 it: Parametri di aggiornamento
 lv: Parametri ir mainîti
 sv: Parametrar uppdaterade
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
