--- a/bin/setup/lang/save.htm
+++ b/bin/setup/lang/save.htm
@@ -15,7 +15,8 @@ fr: Sauvegarde et Restauration
 it: Copia di sicurezza e ripristino dati
 lv: Saglabâðana un atjaunoðana
 sv: Spara och återskapa
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
@@ -66,7 +67,8 @@ sv: För att spara din databas, använd
     <a href="gwsetup?lang=%l;v=gwu.htm">exportera en GeneWeb källfil</a>.
     Kopiera sedan den skapade filen någon annanstans på hårddisken,
     eller bättre, till en annat media.
-] (gwu)
+]
+(gwu)
 
 <p>
 
@@ -90,7 +92,8 @@ lv: Lai atjaunotu datu bâzi, izmantojiet
     datnes</a>.
 sv: För att återskapa en databas, använd
     <a href="gwsetup?lang=%l;v=gwc.htm">importera en GeneWeb källfil</a>.
-] (gwc)
+]
+(gwc)
 
 <p>
 
