--- a/bin/setup/lang/update_nldb_ok.htm
+++ b/bin/setup/lang/update_nldb_ok.htm
@@ -16,7 +16,8 @@ fr: Opération terminée
 it: Operazione terminata
 lv: Darbîba pabeigta
 sv: Operationen klar
-]</title>
+]
+</title>
 %fsetup.css;
 </head>
 
